--- a/game.html
+++ b/game.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">+
-    
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Deer Valley</title>
     <link rel="stylesheet" href="styles.css">
@@ -10,8 +9,12 @@
 <body>
     <div class="container">
         <div class="title">Red Deer Valley</div>
-        <br> <br> <br> <br>
-        <a href="difficulty.html" class="start-button">Start</a>
+        <br>
+        <div id="character-stats"></div>
+        <br>
+        <a href="difficulty.html" class="start-button">Start New Game</a>
+        <br><br>
+        <button class="reset-button" onclick="resetCharacter()">Reset Character</button>
     </div>
     <script src="script.js"></script>
 </body>
