--- a/newplayer.html
+++ b/newplayer.html
@@ -30,7 +30,13 @@
       <button class="button" onclick="rollAgain()">ROLL AGAIN <span class="dice">🎲</span></button>
       <button class="button" onclick="done()">DONE</button>
     </div>
+
+    <!-- Download Logs Button -->
+    <button id="download-logs" class="download-logs">Download Logs</button>
+
   </div>
   <script src="player.js"></script>
+  <script src="log.js"></script>
+
 </body>
 </html>
