--- a/map.html
+++ b/map.html
@@ -7,22 +7,47 @@
     <link rel="stylesheet" href="map.css">
 </head>
 <body>
+    <!-- Stats Bar -->
+    <div id="stats-bar">
+        <div id="hp-bar">
+            <span>HP:</span>
+            <div class="hp-container">
+                <div class="hp-progress"></div>
+            </div>
+        </div>
+        <div id="money"></div>
+        <div id="actions-left"></div>
+        <div id="day"></div>
+    </div>
+
+    <!-- Game Container -->
     <div id="game-container">
         <!-- Character -->
         <div id="character"></div>
         
         <!-- Buildings -->
-        <div class="building" id="bank" data-link="bank.html" style="top: 50px; left: 100px;">Bank</div>
-        <div class="building" id="casino" data-link="final game/casino.html" style="top: 50px; left: 400px;">Casino</div>
-        <div class="building" id="home" data-link="home.html" style="top: 300px; left: 100px;">Home</div>
-        <div class="building" id="redsticks" data-link="redsticks.html" style="top: 300px; left: 400px;">RedSticks</div>
-        <div class="building" id="rdp" data-link="rdp.html" style="top: 50px; left: 700px;">RDP (University)</div>
-        <div class="building" id="convenience" data-link="convenience.html" style="top: 300px; left: 700px;">Convenience</div>
-        
+        <div class="building" id="bank" data-link="bank/bank.html" style="top: 50px; left: 100px;">Bank</div>
+        <div class="building" id="casino" data-link="casino/casino.html" style="top: 50px; left: 400px;">Casino</div>
+        <div class="building" id="home" data-link="charhome/home.html" style="top: 300px; left: 100px;">Home</div>
+        <div class="building" id="redsticks" data-link="redsticks/redsticks.html" style="top: 300px; left: 400px;">RedSticks</div>
+        <div class="building" id="rdp" data-link="rdp/rdp.html" style="top: 50px; left: 700px;">RDP (University)</div>
+        <div class="building" id="convenience" data-link="convenience/convenience.html" style="top: 300px; left: 700px;">Convenience</div>
+        <div class="building" id="redco" data-link="redco/redco.html" style="top: 500px; left: 100px;">RedCo</div>
+        <div class="building" id="bar" data-link="bar.html" style="top: 500px; left: 400px;">Bar</div>
+
         <!-- Roads -->
         <div class="road horizontal" style="top: 200px; left: 0; width: 100%;"></div>
         <div class="road vertical" style="top: 0; left: 300px; height: 100%;"></div>
     </div>
-    <script src="map.js"></script>
+
+    <!-- Download Logs Button -->
+        <button id="download-logs" class="download-logs">Download Logs</button>
+
+
+    <!-- Scripts -->
+    <script src="stat-bar.js"></script> <!-- Shared stat-bar functionality -->
+    <script src="map.js"></script> <!-- Map-specific functionality -->
+    <script src="log.js"></script>
+
 </body>
 </html>
