--- a/game.html
+++ b/game.html
@@ -12,6 +12,8 @@
         <br>
         <div id="character-stats"></div>
         <br>
+        <a id="continue-button" href="map.html" class="continue-button" style="display: none;">Continue Game</a>
+        <br>
         <a href="difficulty.html" class="start-button">Start New Game</a>
         <br><br>
         <button class="reset-button" onclick="resetCharacter()">Reset Character</button>
