--- a/map.html
+++ b/map.html
@@ -18,6 +18,7 @@
         <div id="money"></div>
         <div id="actions-left"></div>
         <div id="day"></div>
+        <button id="view-stats" class="view-stats-button">View Stats</button>
     </div>
 
     <!-- Game Container -->
@@ -31,9 +32,9 @@
         <div class="building" id="home" data-link="charhome/home.html" style="top: 300px; left: 100px;">Home</div>
         <div class="building" id="redsticks" data-link="redsticks/redsticks.html" style="top: 300px; left: 400px;">RedSticks</div>
         <div class="building" id="rdp" data-link="rdp/rdp.html" style="top: 50px; left: 700px;">RDP (University)</div>
-        <div class="building" id="convenience" data-link="convenience/convenience.html" style="top: 300px; left: 700px;">Convenience</div>
+        <div class="building" id="convenience" data-link="convenience/convenience.html" style="top: 300px; left: 700px;">11/7</div>
         <div class="building" id="redco" data-link="redco/redco.html" style="top: 500px; left: 100px;">RedCo</div>
-        <div class="building" id="bar" data-link="bar.html" style="top: 500px; left: 400px;">Bar</div>
+        <div class="building" id="bar" data-link="bar/bar.html" style="top: 500px; left: 400px;">Red Bar</div>
 
         <!-- Roads -->
         <div class="road horizontal" style="top: 200px; left: 0; width: 100%;"></div>
@@ -41,13 +42,12 @@
     </div>
 
     <!-- Download Logs Button -->
-        <button id="download-logs" class="download-logs">Download Logs</button>
-
+    <button id="download-logs" class="download-logs">Download Logs</button>
+    <button id="leave-game" class="leave-game">Leave Game</button>
 
     <!-- Scripts -->
     <script src="stat-bar.js"></script> <!-- Shared stat-bar functionality -->
     <script src="map.js"></script> <!-- Map-specific functionality -->
     <script src="log.js"></script>
-
 </body>
 </html>
