--- a/casino/casino.html
+++ b/casino/casino.html
@@ -29,19 +29,19 @@
     <script>
         // Button Event Listeners
         document.getElementById("play-slots").addEventListener("click", () => {
-            window.location.href = "slots.html"; // Adjust path if needed
+            window.location.href = "slots.html"; 
         });
 
         document.getElementById("play-roulette").addEventListener("click", () => {
-            window.location.href = "roulette.html"; // Adjust path if needed
+            window.location.href = "roulette.html"; 
         });
 
         document.getElementById("play-color-game").addEventListener("click", () => {
-            window.location.href = "colorgame.html"; // Adjust path if needed
+            window.location.href = "colorgame.html"; 
         });
 
         document.getElementById("leave").addEventListener("click", () => {
-            window.location.href = "../map.html"; // Adjust path if needed
+            window.location.href = "../map.html"; 
         });
 
         // Load stats into stat bar
@@ -60,7 +60,8 @@
         document.addEventListener("DOMContentLoaded", loadStats);
     </script>
 
-<script src="../log.js"></script>
+    <script src="../stat-bar.js"></script>
+    <script src="../log.js"></script>
 
 </body>
 </html>
