--- a/casino/colorgame.html
+++ b/casino/colorgame.html
@@ -38,12 +38,12 @@
         <!-- Game Result -->
         <div id="game-result"></div>
 
-        <!-- Leave Button -->
         <button id="leave" class="leave">Leave</button>
     </div>
 
+    <script src="../stat-bar.js"></script>
     <script src="colorgame.js"></script>
-    <script src="log.js"></script>
+    <script src="../log.js"></script>
 
 </body>
 </html>
