--- a/casino/roulette.html
+++ b/casino/roulette.html
@@ -51,6 +51,8 @@
         <button id="leave" class="leave">Leave</button>
     </div>
 
+    <script src="../stat-bar.js"></script>
     <script src="roulette.js"></script>
+    <script src="../log.js"></script>
 </body>
 </html>
