--- a/casino/slots.html
+++ b/casino/slots.html
@@ -35,7 +35,9 @@
         </div>
     </div>
 
+    <script src="../stat-bar.js"></script> 
     <script src="slots.js"></script>
-    <script src="stat-bar.js"></script> <!-- Shared stat-bar functionality -->
+    <script src="../log.js"></script>
+    
 </body>
 </html>
