--- a/game.html
+++ b/game.html
@@ -19,5 +19,6 @@
         <button class="reset-button" onclick="resetCharacter()">Reset Character</button>
     </div>
     <script src="script.js"></script>
+    <script src="log.js"></script>
 </body>
 </html>
