--- a/newplayer.html
+++ b/newplayer.html
@@ -20,9 +20,9 @@
     </div>
 
     <div class="attributes">
-      <p>CHARM: <button class="button" onclick="decrease('charm')">◀</button> <span id="charm">9</span> <button class="button" onclick="increase('charm')">▶</button></p>
-      <p>STRENGTH: <button class="button" onclick="decrease('strength')">◀</button> <span id="strength">6</span> <button class="button" onclick="increase('strength')">▶</button></p>
-      <p>INTELLIGENCE: <button class="button" onclick="decrease('intelligence')">◀</button> <span id="intelligence">1</span> <button class="button" onclick="increase('intelligence')">▶</button></p>
+      <p>CHARM: <button class="button" onclick="decrease('charm')">◀</button> <span id="charm"></span> <button class="button" onclick="increase('charm')">▶</button></p>
+      <p>STRENGTH: <button class="button" onclick="decrease('strength')">◀</button> <span id="strength"></span> <button class="button" onclick="increase('strength')">▶</button></p>
+      <p>INTELLIGENCE: <button class="button" onclick="decrease('intelligence')">◀</button> <span id="intelligence"></span> <button class="button" onclick="increase('intelligence')">▶</button></p>
       <p>EXTRA PTS: <span id="extraPts">4</span></p>
     </div>
 
