--- a/bar/bar.html
+++ b/bar/bar.html
@@ -31,6 +31,8 @@
         </div>
     </div>
 
+    <script src="../stat-bar.js"></script>
     <script src="bar.js"></script>
+    <script src="../log.js"></script>
 </body>
 </html>
