--- a/charhome/home.html
+++ b/charhome/home.html
@@ -30,6 +30,7 @@
         </div>
     </div>
 
+    <script src="../stat-bar.js"></script>
     <script src="home.js"></script>
     <script src="../log.js"></script>
 </body>
