--- a/rdp/rdp.html
+++ b/rdp/rdp.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <script src="stat-bar.js"></script> <!-- Shared stat-bar functionality -->
+    <script src="stat-bar.js"></script> 
     <script src="rdp.js"></script>
     <script src="log.js"></script>
 </body>
